# c8emu

./: .gitignore  CMakeLists.txt  README.md  c8emu.pro
roms/: README.md
src/: chip8.cc  chip8.h  main.cc  window.cc  window.h  window.ui
